--- a/src/todo.css
+++ b/src/todo.css
@@ -4,13 +4,20 @@
     
 
 }
-
-body {
-    display: flex;
-    background-image: url(https://images.pexels.com/photos/459301/pexels-photo-459301.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
-    background-size: cover;
-    flex-direction: row;
-    justify-content: center;
+  html, body {
+        height: 100%;
+    } 
+     html {
+        display: table;
+        margin: auto;
+    }
+     
+    body {
+        display: table-cell;
+        vertical-align: middle;
+        background-image: url(https://images.pexels.com/photos/459301/pexels-photo-459301.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+        background-size: cover;
+    
 }
 
 .main_div {
