--- a/src/todo.css
+++ b/src/todo.css
@@ -4,23 +4,22 @@
     
 
 }
- body {       background-image: url(https://images.pexels.com/photos/459301/pexels-photo-459301.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
-              background-size: cover;
-      }
-  html, body {
-        height: 100%;
-    } 
-     html {
-        display: table;
-        margin: auto;
-    }
-     
-    body {
-        display: table-cell;
-        vertical-align: middle;
-          }
+html{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+ }
+    
 
-.main_div {
+body {
+    width: 450px;
+    height: 700px;  
+    display: flex !important;
+    justify-content: center;
+    align-items: center;  background-image: url(https://images.pexels.com/photos/459301/pexels-photo-459301.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+    background-size: cover;
+}
+ .main_div {
     display: flex;
     justify-content: flex-start;
     justify-content: center;
