--- a/src/todo.css
+++ b/src/todo.css
@@ -24,6 +24,8 @@ body {
     justify-content: flex-start;
     justify-content: center;
     align-content: center;
+       width: 350px;
+    height: 575px;
     width: 335px;
     height: 575px;
     border: 0px;
@@ -41,7 +43,7 @@ body {
     margin-top: 10px;
     text-align: center;
     font-size: 52px;
-    width: 350px;
+    width: 335px;
     height: 60px;
     background: purple;
 
