--- a/src/todo.css
+++ b/src/todo.css
@@ -13,7 +13,7 @@ html{
 
 body {
     width: 450px;
-    height: 660px;  
+    height:auto;
     display: flex !important;
     justify-content: center;
     align-items: center;  background-image: url(https://images.pexels.com/photos/459301/pexels-photo-459301.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
